[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcm-msgs"
version = "0.1.1"
description = "LCM generated Python bindings for ROS based types"
authors = [
    {name = "Dimensional"}
]
readme = "README.md"
requires-python = ">=3.1"
dependencies = ["lcm"]

[project.urls]
"Homepage" = "https://github.com/dimensional/python_lcm_msgs"
